--- a/htmx/index.html
+++ b/htmx/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Swath</title>
+    <style>
+        html,
+        body {
+            height: 100%
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Swath says Hello</h1> 
+    <div class="container text-center h-50 d-flex align-items-center justify-content-center">
+
+        <div class="row">
+            <div class="col-1">
+            </div>
+            <div class="col-10">
+                <h1>Swath says Hello</h1>
+            </div>
+            <div class="col-1">
+            </div>
+        </div>
+    </div>
+    <div class="container text-center h-25 d-flex align-items-center justify-content-center">
+
+        <div class="row">
+            <div class="col-1">
+            </div>
+            <div class="col-10">
+                <a href="https://github.com/adorigi/swath" class="btn btn-lg  btn-outline-warning">Swath Repo</a>
+            </div>
+            <div class="col-1">
+            </div>
+        </div>
+    
+        <div class="row">
+            <div class="col-1">
+            </div>
+            <div class="col-10">
+                <a href="https://github.com/adorigi/patroller" class="btn btn-lg  btn-outline-warning">Patroller
+                    Repo</a>
+            </div>
+            <div class="col-1">
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
-</html>
