--- a/htmx/index.html
+++ b/htmx/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -34,18 +34,33 @@
             <div class="col-1">
             </div>
             <div class="col-10">
-                <a href="https://github.com/adorigi/swath" class="btn btn-lg  btn-outline-warning">Swath Repo</a>
+                <a href="https://github.com/adorigi/swath" class="btn btn-lg  btn-outline-warning">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-github" viewBox="0 0 18 18">
+                        <path
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8">
+                        </path>
+                    </svg>
+                    Swath
+                </a>
             </div>
             <div class="col-1">
             </div>
         </div>
-    
+
         <div class="row">
             <div class="col-1">
             </div>
             <div class="col-10">
-                <a href="https://github.com/adorigi/patroller" class="btn btn-lg  btn-outline-warning">Patroller
-                    Repo</a>
+                <a href="https://github.com/adorigi/patroller" class="btn btn-lg  btn-outline-warning">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-github" viewBox="0 0 18 18">
+                        <path
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8">
+                        </path>
+                    </svg>
+                    Patroller
+                </a>
             </div>
             <div class="col-1">
             </div>
@@ -55,3 +70,9 @@
 
 
 </body>
+
+<footer class=" text-center text-lg-start fixed-bottom">
+    <div class="text-center p-3 text-warning">
+        v{{ .Version }}
+    </div>
+</footer>
