--- a/htmx/index.html
+++ b/htmx/index.html
@@ -6,17 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="/icon.png">
     <title>Swath</title>
     <style>
-        html,
+        /* html,
         body {
             height: 100%
+        } */
+
+        section {
+            padding: 60px 0;
         }
     </style>
+    <script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-    <div class="container text-center h-50 d-flex align-items-center justify-content-center">
+    <!-- <div class="container text-center text-warning h-25 d-flex align-items-center justify-content-center">
 
         <div class="row">
             <div class="col-1">
@@ -28,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="container text-center h-25 d-flex align-items-center justify-content-center">
+    <div class="container text-center h-100 d-flex align-items-center justify-content-center">
 
         <div class="row">
             <div class="col-1">
@@ -65,14 +72,93 @@
             <div class="col-1">
             </div>
         </div>
-    </div>
+    </div> -->
 
 
+
+
+
+    <!-- Landing Page -->
+    <section id="Landing">
+        <div class="container-lg">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-5 text-center">
+                    <h1 class="text-warning display-2">Swath</h1>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-10 text-center">
+                    <h3 class="text-white-50 ">A collection of Swath and its ancestors</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container-lg">
+            <div class="row my-5 align-items-center justify-content-center">
+                <div class="col-8 col-lg-5 col-xl-5">
+                    <div class="card border-dark">
+                        <div class="card-body text-center py-5">
+                            <!-- <h4 class="card-title text-warning text-lg">
+                                Past Swath
+                            </h4> -->
+
+                            <div class="container py-2">
+                                <button hx-get="/aboutSwath" hx-target="#content" class="btn btn-lg btn-outline-warning">
+                                    About Swath
+                                </button>
+                            </div>
+
+                            <div class="container py-2">
+                                <button hx-get="/getlinks" hx-target="#content" class="btn btn-lg btn-outline-warning">
+                                    Get links to Past Swath
+                                </button>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-lg-5 col-xl-5">
+                    <div class="card">
+                        <!-- <div class="card-header text-center">
+                            <h4 class="text-warning">Content</h4>
+                        </div> -->
+                        <div class="card-body text-center py-5">
+                            
+                            
+                            <div id="content" class="container" >
+
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, dolores!</p>
+                                <!-- <ul class="list-group">
+                                    <div class="btn-group-vertical">
+                                        <a href="https://swath.gule-gulzar.com" class="btn btn-outline-warning">
+                                           Latest
+                                        </a>
+                                        <a href="https://swath.gule-gulzar.com" class="btn btn-outline-warning">
+                                            Latest
+                                         </a>
+                                    </div> 
+                                    <li class="list-group-item">Vestibulum at eros</li> 
+                                </ul> -->
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 
 </body>
 
-<footer class=" text-center text-lg-start fixed-bottom">
-    <div class="text-center p-3 text-warning">
+<footer class="footer text-center text-lg-start fixed-bottom">
+    <div class="text-center p-3 text-warning bg-dark">
         v{{ .Version }}
     </div>
 </footer>
